--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+        - bump IO::File dep, since it fails with earlier versions (plack/#460)
 
 0.02  2012-09-30 19:24:00 CST
         - fix subclassing (so that Plack::TempBuffer continues to work)
